Bold author bio in sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ baidu_site_verification  :
 author:
   name             : "夏元俊"
   avatar           : "images/Xia.jpg"
-  bio              : "博士研究生（桂林电子科技大学）"
-  location         : "河南驻马店 / 广西桂林"
+  bio              : "博士研究生 | 桂林电子科技大学"
+  location         : "河南驻马店"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=fopP3AsAAAAJ&hl=zh-CN&oi=ao"
-  email            : "xiaujun@163.com"
+  email            : "[xiaujun@163.com]"
   researchgate     : "https://www.researchgate.net/profile/Xia-Yuanjun"
   uri              : "https://xiayuanj.github.io/xyj.github.io/"
   bitbucket        :
