Apply bold/normal bilingual styling to author name and remove duplicate English name

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :
 
 # Site Author
 author:
-  name             : "夏元俊"
+  name             : "<b>夏元俊</b> <span style='font-weight: normal; font-size: 0.7em;'>YuanJun Xia</span>"
   avatar           : "images/Xia.jpg"
   bio              : "博士研究生 | 桂林电子科技大学"
   location         : "河南驻马店"
